fix(whole application): fixed page layout issue that causes footer to not stay in bottom position

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,27 @@ body {
   color: #fffafb;
 }
 
+#pageContainer {
+  position: relative;
+  min-height: 100vh;
+}
+
+#contentWrap {
+  padding: 4rem 2rem 3.5rem 2rem;
+}
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 3.5rem;
+  padding-right: 8px;
+  background: rgba(0, 0, 0, 0.30);
+  box-shadow: 0px 0 10px rgba(0, 0, 0, 0.15);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
 a {
   color: inherit;
   text-decoration: none;
