--- a/styles/pages/about-me.module.css
+++ b/styles/pages/about-me.module.css
@@ -1,5 +1,4 @@
 .container {
-  min-height: 88vh;
   display: flex;
   flex-direction: row;
   justify-content: center;
