--- a/styles/pages/index.module.css
+++ b/styles/pages/index.module.css
@@ -1,14 +1,4 @@
 .container {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.main {
-  padding: 2rem 0;
-  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
